--- a/.github/Makefile
+++ b/.github/Makefile
@@ -4,8 +4,8 @@ n98-magerun2.phar:
 	chmod +x ./n98-magerun2.phar
 
 # Check Magento installation
-sys-check: n98-magerun2.phar
-	php ./n98-magerun2.phar sys:check --skip-root-check
+sys-check: 
+	./n98-magerun2.phar sys:check --skip-root-check
 
 # Install Magento (without starting Apache)
 magento:
