--- a/.github/workflows/graphql-test.yml
+++ b/.github/workflows/graphql-test.yml
@@ -32,7 +32,7 @@ jobs:
         run: docker exec magento2-container make fs
 
       - name: Check install
-        run: docker exec -u www-data magento2-container make VERBOSE=1 sys-check
+        run: docker exec -u www-data magento2-container make --debug=j sys-check
       - name: Install plugin
         run: docker exec -u www-data magento2-container make plugin
 
