--- a/.github/Makefile
+++ b/.github/Makefile
@@ -1,7 +1,7 @@
 # Install N98-Magerun
 n98-magerun2.phar:
 	wget -q https://files.magerun.net/n98-magerun2.phar
-	mv -f ./n98-magerun2.phar /var/www/html/
+	mv -n ./n98-magerun2.phar /var/www/html/
 	cd /var/www/html/
 	chmod +x ./n98-magerun2.phar
 
